RESOLVED FIXED31926
V8 WorkerContextExecutionProxy does not have necessary guards for SHARED_WORKERS
https://bugs.webkit.org/show_bug.cgi?id=31926
Summary V8 WorkerContextExecutionProxy does not have necessary guards for SHARED_WORKERS
Steve Block
Reported 2009-11-27 04:30:49 PST
V8 WorkerContextExecutionProxy does not have necessary guards for SHARED_WORKERS. Methods of this class use types only defined when SHARED_WORKERS is enabled.
Attachments
Patch 1 for Bug 31926 (3.15 KB, patch)
2009-11-27 04:51 PST, Steve Block
no flags
Steve Block
Comment 1 2009-11-27 04:51:58 PST
Eric Seidel (no email)
Comment 2 2009-11-28 09:38:18 PST
Comment on attachment 43944 [details] Patch 1 for Bug 31926 OK
WebKit Commit Bot
Comment 3 2009-11-30 09:03:43 PST
Comment on attachment 43944 [details] Patch 1 for Bug 31926 Clearing flags on attachment: 43944 Committed r51493: <http://trac.webkit.org/changeset/51493>
WebKit Commit Bot
Comment 4 2009-11-30 09:03:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.