2009-11-30  Steve Block  <steveblock@google.com>

Reviewed by Eric Seidel.

        Adds SHARED_WORKERS guards to V8 WorkerContextExecutionProxy.
        https://bugs.webkit.org/show_bug.cgi?id=31926

        Build fix only, no new tests.

        * bindings/v8/WorkerContextExecutionProxy.cpp:
        (WebCore::WorkerContextExecutionProxy::initContextIfNeeded):
        (WebCore::WorkerContextExecutionProxy::convertToV8Object):
        (WebCore::WorkerContextExecutionProxy::convertEventTargetToV8Object):

Canonical link: https://commits.webkit.org/42921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51493 268f45cc-cd09-0410-ab3c-d52691b4dbfc